<resources>
    <string name="app_name">CST2335-Lab</string>
    <string name="hello">Hello World!</string>
    <string name="ImButton">I\'m a button</string>

    <string name="title_activity_login">LoginActivity</string>

    <string name="login">Login</string>
    <string name="email_hint">Login email address</string>
    <string name="password">Password</string>
    <string name="passwordText">Password</string>

    <string name="ButtonText1">Button 1</string>
    <string name="ButtonText2">Button 2</string>

    <string name="abc">Enable Something</string>
    <string name="image">Image_star</string>
    <string name="loginButton">Login button</string>

    <string name="dialog_message">Do you want to finish this activity?</string>
    <string name="dialog_title">Exit?</string>
    <string name="ok">Yes</string>
    <string name="cancel">Cancel</string>

    <string name="ButtonTextStart">Chat button</string>
    <string name="sent_button"> Sent</string>

    <string name="title_activity_chat_window">ChatWindow</string>
    <string name="message_textView">new Text</string>
    <string name="image_desc">Call out/in</string>

    <string name="weatherButton"> Weather</string>
    <string name="title_activity_weather_forecast">WeatherForecast</string>

    <string name="temperature"> temperature </string>
    <string name="temperature_min">minimum temperature </string>
    <string name="temperature_max">maximum temperature </string>
    <string name="title_message_list">Messages</string>
    <string name="title_message_detail">Message Detail</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>


    <string name="toolbarButton">Test Toolbar</string>
</resources>
