<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:rowCount="2"
    android:columnCount="2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.yu.cst2335_lab.ListItemsActivity">

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonText1"
        android:layout_column="0"
        android:layout_row="0"
        android:id="@+id/radioButton" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonText2"
        android:layout_column="1"
        android:layout_row="0"
        android:id="@+id/checkBox" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abc"
        android:layout_column="0"
        android:layout_row="1"
        android:id="@+id/switch1" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageButton"
        android:layout_column="1"
        android:layout_row="1"
        android:contentDescription="@string/abc"
        android:background="@android:drawable/btn_star_big_on" />
</GridLayout>
